<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mini Monster X</string>
    <string name="app_name_debug" translatable="false">Mini Monster X alpha</string>
    <string name="action_settings" tools:ignore="ExtraTranslation">Settings</string>
    <string name="url">Address</string>
    <string name="pass" translatable="false">password</string>
    <string name="title_activity_login">Setup</string>
    <string name="current_device">Current device</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tab_label1">Inputs/Outputs</string>
    <string name="tab_label2">Fire impulse</string>
    <string name="tab_main">Main settings</string>
    <string name="tab_reset">Reset outputs</string>
    <string name="tab_thermo">Thermal</string>
    <string name="tab_w_dog">Watchdog</string>
    <string name="tab_pwm">PWM</string>
    <string name="tab_settings">Settings</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Setup</string>
    <string name="error_invalid_address">This address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="passwordHint">Password</string>
    <string name="refresh_cyclically">Refresh cyclically</string>
    <string name="set_output">Output</string>
    <string name="devices">Devices</string>
    <string name="add_device">Add device</string>
    <string name="systemDefault">System colors</string>
    <string name="lightMode">Light mode</string>
    <string name="darkMode">Dark mode</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="communicate">Communicate</string>
    <string name="action_refresh">Refresh</string>
    <string name="chose_share">Chose share</string>
    <string name="chose_send">Chose send</string>
    <string name="choose_device">Choose device</string>
    <string name="device_url">Device URL</string>
    <string name="password">Password</string>
    <string name="ok">OK</string>
    <string name="io_icon">IO icon</string>
    <string name="input">Input</string>
    <string name="device_name">Device name</string>
    <string name="input_icon">Input icon</string>
    <string name="output_icon">Output icon</string>
    <string name="no_conn">No connection</string>
    <string name="dev_name_required">Device name required</string>
    <string name="dev_name_already_exists">Device name already exists</string>

    <string name="parameters">Parameters</string>
    <string name="home_picture">Home picture</string>
    <string name="cant_update">Unable to update</string>
    <string name="delete_device">Delete a device</string>
    <string name="sure_delete_device">Are you sure you want to delete a device? the settings and password will be deleted as well</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_devices">No devices created</string>
    <string name="cancel">Cancel</string>
    <string name="port_name">Port name</string>
    <string name="set_port_name">Set port name</string>
    <string name="empty_name">Name should\'nt be empty</string>
    <string name="impulse_setting_error">Error setting impulse</string>
    <string name="loading_data_error">Error loading data cyclically</string>
    <string name="setting_thermostat_error">Error setting thermostat parameters</string>
    <string name="setting_output_error">Error setting output</string>
    <string name="update_available">Update available</string>
    <string name="downloading">Downloading…</string>
    <string name="update_error">Couldn\'t update application, please try later</string>
    <string name="updating">Updating…</string>
    <string name="update_ready">An update has just been downloaded</string>
    <string name="restart">Restart</string>
    <string name="could_not_update">Couldn\'t update, try later</string>
    <string name="version">version %1$s</string>


    <string name="change_output">Change output type</string>
    <string name="sure_change_output_type">Are you sure you want to change the output type? (direct type, impulse type)</string>
    <string name="temperature" translatable="false">%s °C</string>
    <string name="thermostat_properties">Thermostat %s properties</string>
    <string name="thermostat_n">Thermostat %s</string>
    <string name="turn_on">turn On</string>
    <string name="turn_off">turn Off</string>
    <string name="temperature_tcal">Temperature + tCal =</string>
    <string name="target">Target</string>
    <string name="hysteresis">Hysteresis</string>
    <string name="calibration">Calibration</string>
    <string name="set_temperature">Set temperature</string>
    <string name="add_a_port">Add a port</string>
    <string name="temp">°C</string>
    <string name="delete">Delete</string>
</resources>
