<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settingsToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:touchscreenBlocksFocus="false"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="UnusedAttribute" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dialogTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_height"
                android:fontFamily="sans-serif-thin"
                android:gravity="center|center_horizontal"
                android:text="@string/parameters"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/ic_toggle_background"
                android:textSize="@dimen/title" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <AutoCompleteTextView
                android:id="@+id/deviceName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_height"
                android:hint="@string/device_name"
                android:inputType="textUri" />

            <AutoCompleteTextView
                android:id="@+id/url"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_height"
                android:hint="@string/device_url"
                android:inputType="textUri" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_height"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_ok"
                style="@style/selectableButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ok" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

