<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/txtVMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:autofillHints="@+id/txtVMessage"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/port_name"
        android:inputType="textPersonName"
        android:text="@string/port_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVDiagTitle"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:background="?attr/selectableItemBackground"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtVMessage"
        app:layout_constraintTop_toBottomOf="@+id/txtVMessage"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/btnSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnCancel"
        android:layout_alignBottom="@+id/btnCancel"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="?attr/selectableItemBackground"
        android:text="@string/ok"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/txtVMessage"
        app:layout_constraintTop_toTopOf="@+id/btnCancel" />

    <TextView
        android:id="@+id/txtVDiagTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:text="@string/set_port_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>