<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/imageViewInput"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_weight="1"
        android:contentDescription="@string/input_icon"
        app:layout_constraintBottom_toBottomOf="@+id/checkedTextView1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkedTextView1"
        app:srcCompat="@drawable/input"
        android:padding="6dp"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/txtVTemperature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:fontFamily="sans-serif-thin"
        android:foreground="?attr/selectableItemBackground"
        android:nextFocusLeft="@id/imageViewInput"
        android:nextFocusRight="@id/checkedTextView1"
        android:text="@string/temperature"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/checkedTextView1"
        app:layout_constraintStart_toEndOf="@+id/imageViewInput"
        app:layout_constraintTop_toTopOf="@+id/checkedTextView1"
        tools:ignore="UnusedAttribute" />

    <CheckedTextView
        android:id="@+id/checkedTextView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:checked="true"
        android:focusable="true"
        android:fontFamily="sans-serif-thin"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:text="@string/input"
        android:textAlignment="inherit"
        android:textSize="@dimen/input_output_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtVTemperature"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/imageViewInput"
        tools:layout_editor_absoluteX="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>